--- a/index.html
+++ b/index.html
@@ -68,69 +68,72 @@
 
         <!-- 按钮 -->
         <div class="row text-center mb-5">
-            <a target="_blank" href="https://www.bilibili.com/video/BV1Je411V7ko/" class="btn btn-danger">
-                <b>宣传片</b>
-            </a>
-            <a target="_blank" href="https://pan.baidu.com/s/1QdntVzwvBSVLxp_YxAa_Ug?pwd=cube" class="btn btn-light" style="margin-left: 1rem;">
-                <b>整合包</b>
-            </a>
+            <div class="d-flex justify-content-center">
+                <a target="_blank" href="https://www.bilibili.com/video/BV1Je411V7ko/" class="btn btn-danger btn-custom-size me-2">
+                    <b>宣传片</b>
+                </a>
+                <a target="_blank" href="https://pan.baidu.com/s/1QdntVzwvBSVLxp_YxAa_Ug?pwd=cube" class="btn btn-light btn-custom-size">
+                    <b>整合包</b>
+                </a>
+            </div>
         </div>
 
         <!-- 服务器状态和在线玩家列表 -->
-        <div class="row text-center">
-            <div class="card">
-                <h2 class="card-header">🟢 实时状态</h2>
-                <div class="card-body">
-                    <p>状态: <span id="status">加载中...</span></p>
-                    <p>在线玩家: <span id="online-players">0</span>/<span id="max-players">20</span></p>
-                    <p>版本: <span id="server-version">加载中...</span></p>
-                    <h3 class="mt-4">👥 在线玩家</h3>
-                    <ul id="player-list">
-                        <li>正在获取玩家列表...</li>
-                    </ul>
+        <div class="row">
+            <div class="col-md-6">
+                <div class="card">
+                    <h2 class="card-header">🟢 实时状态</h2>
+                    <div class="card-body">
+                        <p>状态: <span id="status">加载中...</span></p>
+                        <p>在线玩家: <span id="online-players">0</span>/<span id="max-players">20</span></p>
+                        <p>版本: <span id="server-version">加载中...</span></p>
+                        <h3 class="mt-4">👥 在线玩家</h3>
+                        <ul id="player-list">
+                            <li>正在获取玩家列表...</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <!-- 管理团队和建筑团队 -->
+                <div class="card mb-4">
+                    <h2 class="card-header">👑 退休团队</h2>
+                    <div class="card-body">
+                        <p>
+                            00 | <a target="_blank" href="http://angushushu.com" style="text-decoration:none; color:white;">angushushu</a> | AkariDream | [退休]Furiina | [退休]heckteck<br>
+                            [退休]linzaiua | <a target="_blank" href="https://siyangchen.com/" style="text-decoration:none; color:white;">SiYang</a> | [退休]Tomeggo<br>
+                            [退休]XY_kuailexy | <a target="_blank" href="https://blog.hotwind.cc" style="text-decoration:none; color:white;">HotWind</a><br>
+                            <a target="_blank" href="https://adlambxd.github.io" style="text-decoration:none; color:white;">yzh</a> | <a target="_blank" href="https://zh-cn.namemc.com/profile/NinKauneus.1" style="text-decoration:none; color:white;">NinKauneus</a> | [退休]Mark_Q | <a target="_blank" href="adlambxd.github.io" style="text-decoration:none; color:white;">AdLamb</a>
+                        </p>
+                    </div>
+                </div>
+                <div class="card mb-4">
+                    <h2 class="card-header">👷‍♂️ 在职团队</h2>
+                    <div class="card-body">
+                        <p>
+                            fire_God | HotWind | SiYang | yzh | NinKauneus | Mark_Q | AdLamb
+                        </p>
+                    </div>
+                </div>
+                <div class="card mb-4">
+                    <h2 class="card-header">🚧 试用团队</h2>
+                    <div class="card-body">
+                        <p>
+                            qorhe | wudimoyuren
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
 
-        <!-- 管理团队和建筑团队 -->
-        <div class="row text-center mt-5">
-            <div class="card mb-4">
-                <h2 class="card-header">👑 退休团队</h2>
-                <div class="card-body">
-                    <p>
-                        00 | <a target="_blank" href="http://angushushu.com" style="text-decoration:none; color:white;">angushushu</a> | AkariDream | [退休]Furiina | [退休]heckteck<br>
-                        [退休]linzaiua | <a target="_blank" href="https://siyangchen.com/" style="text-decoration:none; color:white;">SiYang</a> | [退休]Tomeggo<br>
-                        [退休]XY_kuailexy | <a target="_blank" href="https://blog.hotwind.cc" style="text-decoration:none; color:white;">HotWind</a><br>
-                        <a target="_blank" href="https://adlambxd.github.io" style="text-decoration:none; color:white;">yzh</a> | <a target="_blank" href="https://zh-cn.namemc.com/profile/NinKauneus.1" style="text-decoration:none; color:white;">NinKauneus</a> | [退休]Mark_Q | <a target="_blank" href="adlambxd.github.io" style="text-decoration:none; color:white;">AdLamb</a>
-                    </p>
-                </div>
-            </div>
-            <div class="card mb-4">
-                <h2 class="card-header">👷‍♂️ 在职团队</h2>
-                <div class="card-body">
-                    <p>
-                        fire_God | HotWind | SiYang | yzh | NinKauneus | Mark_Q | AdLamb
-                    </p>
-                </div>
-            </div>
-            <div class="card mb-4">
-                <h2 class="card-header">🚧 试用团队</h2>
-                <div class="card-body">
-                    <p>
-                        qorhe | wudimoyuren
-                    </p>
-                </div>
-            </div>
-        </div>
+        <!-- 页脚 -->
+        <footer class="text-center mt-5">
+            <p>© 2023 方块叉 CubeX | 由 GitHub Pages 托管</p>
+        </footer>
+
+        <!-- 脚本 -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+        <script src="js/script.js"></script>
     </div>
-
-    <!-- 页脚 -->
-    <footer class="text-center mt-5">
-        <p>© 2023 方块叉 CubeX | 由 GitHub Pages 托管</p>
-    </footer>
-
-    <!-- 脚本 -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <script src="js/script.js"></script>
 </body>
 </html>
