--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <h1 class="text-shadow">
                 <b><span style="color:rgb(202, 0, 0)">Cube</span>X</b> 养老服务器
             </h1>
-            <p class="text-shadow"><b>IP：play.cubexmc.net (Java)</b></p>
+            <p class="text-shadow"><b>IP：play.cubexmc.top (Java)</b></p>
             <p class="text-shadow"><b>QQ群：470579814</b></p>
         </div>
 
@@ -100,10 +100,10 @@
                     <h2 class="card-header">👑 退休团队</h2>
                     <div class="card-body">
                         <p>
-                            00 | <a target="_blank" href="http://angushushu.com" style="text-decoration:none; color:white;">angushushu</a> | AkariDream | [退休]Furiina | [退休]heckteck<br>
-                            [退休]linzaiua | <a target="_blank" href="https://siyangchen.com/" style="text-decoration:none; color:white;">SiYang</a> | [退休]Tomeggo<br>
-                            [退休]XY_kuailexy | <a target="_blank" href="https://blog.hotwind.cc" style="text-decoration:none; color:white;">HotWind</a><br>
-                            <a target="_blank" href="https://adlambxd.github.io" style="text-decoration:none; color:white;">yzh</a> | <a target="_blank" href="https://zh-cn.namemc.com/profile/NinKauneus.1" style="text-decoration:none; color:white;">NinKauneus</a> | [退休]Mark_Q | <a target="_blank" href="adlambxd.github.io" style="text-decoration:none; color:white;">AdLamb</a>
+                            AkariDream | <a target="_blank" href="http://angushushu.com" style="text-decoration:none; color:white;">angushushu</a> | fire_god | Furiina<br>
+                            heckteck | <a target="_blank" href="https://blog.hotwind.cc" style="text-decoration:none; color:white;">HotWind</a> | linzaiua | qorhe<br>
+                            RoiAsn | Shioeaxiki | <a target="_blank" href="https://siyangchen.com/" style="text-decoration:none; color:white;">SiYang</a> | Tao_xiaobai<br>
+                            Tomeggo<br>
                         </p>
                     </div>
                 </div>
@@ -111,7 +111,10 @@
                     <h2 class="card-header">👷‍♂️ 在职团队</h2>
                     <div class="card-body">
                         <p>
-                            fire_God | HotWind | SiYang | yzh | NinKauneus | Mark_Q | AdLamb
+                            <a target="_blank" href="https://adlambxd.github.io" style="text-decoration:none; color:white;">Adlamb</a> | Bedrock_DragonXG | Brilliant_Boboo | Ender<br>
+                            GNBM | Herobrine | HXLS | janhous<br>
+                            Jason31416 | Mark_Q | Morgen_MC | NinKauneus<br>
+                            Qreakee | Ricky<br>
                         </p>
                     </div>
                 </div>
@@ -119,7 +122,7 @@
                     <h2 class="card-header">🚧 试用团队</h2>
                     <div class="card-body">
                         <p>
-                            qorhe | wudimoyuren
+                            wudimoyuren
                         </p>
                     </div>
                 </div>
@@ -128,7 +131,7 @@
 
         <!-- 页脚 -->
         <footer class="text-center mt-5">
-            <p>© 2023 方块叉 CubeX | 由 GitHub Pages 托管</p>
+            <p>© 2025 方块叉 CubeX</p>
         </footer>
 
         <!-- 脚本 -->
